[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-testcase-gen"
version = "0.1.0"
description = "LLM-powered unit-test case generator (parse -> generate -> dedupe -> coverage)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "李想 (Lixiang)" }]
keywords = [
    "llm",
    "test-generation",
    "unit-test",
    "code-testing",
    "llm-engineering",
    "quality-assurance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
llm-testcase-gen = "llm_testcase_gen.cli:main"

[project.urls]
Homepage = "https://github.com/Lixiang878/llm-testcase-gen"
Repository = "https://github.com/Lixiang878/llm-testcase-gen"
Issues = "https://github.com/Lixiang878/llm-testcase-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
